--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "swa": "swa start dist/anglab --api api",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
