--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,8 @@
   "dependencies": {},
   "devDependencies": {
     "@azure/functions": "^1.2.3",
+    "@azure/static-web-apps-cli": "^0.7.2",
+    "azure-functions-core-tools": "^3.0.3785",
     "typescript": "^4.0.0"
   }
 }
